# uproot-examples

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COPILOT.md  InitializeInfo.html  Procfile  ProjectAdminBody.html  ProjectBody.html  README.md  app.json  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
_static/: tabs.css  tabs.js
anchoring/: AdminDigest.html  Estimate.html  README.md  Results.html  __init__.py  simulate.js
anchoring_markdown/: Estimate.md  README.md  Results.md  __init__.py  simulate.js
balanced_page_order/: End.html  Page1.html  Page2.html  Page3.html  README.md  Start.html  __init__.py  simulate.js
bargaining/: Bargain.html  README.md  Results.html  __init__.py  simulate.js
barrier/: Barrier.html  Page2.html  README.md  __init__.py
beauty_contest/: Guess.html  README.md  Results.html  __init__.py  simulate.js
bertrand/: Decision.html  Instructions.html  Results.html  Simulator.html  __init__.py  simulate.js
between/: Intro.html  OpenResponse.html  ProductChoice.html  README.md  Results.html  TreatmentInfo.html  TreatmentTask.html  __init__.py
big5/: Response.html  Results.html  __init__.py  simulate.js
big5_short/: Response.html  __init__.py
bisection/: Choice.html  Instructions.html  README.md  Results.html  __init__.py  simulate.js
bounded_choice/: Fields.html  README.md  Results.html  __init__.py
bret/: Choose.html  README.md  Results.html  __init__.py  simulate.js
button_placement/: Centered.html  Default.html  Finale.html  README.md  Relabeled.html  Styled.html  TimeoutDisplay.html  __init__.py
call_auction/: AdminDigest.html  Instructions.html  README.md  Results.html  Submit.html  __init__.py
captcha/: README.md  Results.html  SolveCaptcha.html  __init__.py  simulate.js
chat/: ChatHere.html  README.md  __init__.py
chat_with_claude/: Chat.html  README.md  __init__.py
chat_with_gpt/: Chat.html  README.md  __init__.py
conjoint/: Choice.html  README.md  __init__.py
continuous/: FirstPage.html  README.md  __init__.py
counter/: README.md  __init__.py
counter_alpine/: Counter.html  README.md  __init__.py
cournot/: Decision.html  Instructions.html  Results.html  Simulator.html  __init__.py  simulate.js
detect_presence/: Info.html  README.md  RaiseHands.html  __init__.py
dictator_game/: Dictate.html  README.md  Results.html  __init__.py  simulate.js
die_roll/: AdminDigest.html  README.md  Results.html  Roll.html  __init__.py  simulate.js
double_auction/: AdminDigest.html  AdminSettings.html  Instructions.html  InstructionsText.html  README.md  RaiseHands.html  RoundInfo.html  RoundInfoText.html  Trade.html  __init__.py  find_eq.py  simulate.js
draganddrop/: DragAndDrop.html  README.md  Results.html  __init__.py
drawing_board/: Draw.html  README.md  __init__.py
dropouts/: Hello.html  README.md  __init__.py
embed_static/: README.md  ShowImage.html  __init__.py
emoji_sort/: Categorize.html  README.md  Results.html  __init__.py
encryption_task/: Encryption.html  README.md  Results.html  __init__.py
first_price_auction/: Bid.html  README.md  Results.html  __init__.py  simulate.js
focal_point/: Claim.html  README.md  Results.html  __init__.py  simulate.js
gift_exchange_game/: ChooseEffort.html  README.md  Results.html  SetWage.html  __init__.py  simulate.js
group_with_dropout/: PageWithTimeLimit.html  README.md  __init__.py
grouping/: README.md  __init__.py
grouping_one_spare/: README.md  (+2 more)
(+336 files in other folders)
