[project]
name = "uproot-project"
version = "0.1.0"
description = "An uproot-based web application for behavioral science experiments"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "audioop-lts",
    "black",
    "find-eq @ git+https://github.com/mrpg/find-eq.git@master",
    "isort",
    "mini-exchange @ git+https://github.com/mrpg/mini-exchange.git@master",
    "pillow==12.2.0",
    "pre-commit",
    "pydub",
    "ruff",
    "schwifty",
    "uproot-science @ git+https://github.com/mrpg/uproot.git@main",
]

[tool.black]
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true

[project.optional-dependencies]
pg = [
    "uproot-science[pg] @ git+https://github.com/mrpg/uproot.git@main",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.isort]
profile = "black"
